# sodium

./: mk  mk-test  run  sodium.cabal
docs/: target.md
source/: CLI.hs  Main.hs  Success.hs  Tr.hs
source/Backend/: Dechlorinate.hs  Program.hs  Render.hs  Transform.hs
source/Chloride/: Chloride.hs  Dissolve.hs  IOMagic.hs  Program.hs  Vectorizer.hs
source/Frontend/: Chlorinate.hs  Parser.hs  Program.hs  Token.hs  Tokenizer.hs
src/: Main.hs  Sodium.hs  Tr.hs
src/Backend/: Dechlorinate.hs  Program.hs  Render.hs
src/Chloride/: IOMagic.hs  Program.hs  Vectorizer.hs
src/Frontend/: Chlorinate.hs  Parser.hs  Tokenizer.hs
src/Sodium/: SubstituteSingle.hs  Success.hs  Tr.hs
src/Sodium/Backend/: Dech.hs  Program.hs  Render.hs
src/Sodium/Chloride/: Flatten.hs  IOMagic.hs  Inline.hs  JoinMultiIf.hs  Pattern.hs  Program.hs  Side.hs  Vectorize.hs  Vectorizer.hs
src/Sodium/Chloride/Program/: Vector.hs
src/Sodium/Chloride/Recmap/: Scalar.hs
src/Sodium/Frontend/: Chlorinate.hs  Parser.hs  Program.hs  Token.hs  Tokenizer.hs
src/Sodium/Haskell/: Convert.hs  Program.hs  Render.hs
src/Sodium/Pascal/: Convert.hs
src/sodium-tool/: Main.hs
test/dest/: cond.hs  factorial-func.hs  factorial.hs  hello-func.hs  hello-var.hs  hello.hs
test/source/arithm/impl/: lits.pas
test/source/broken/impl/: parse.pas  token.pas
test/source/comment/impl/: comment.pas  nested.pas
test/source/cond/impl/: casecond.pas  cond-func.pas  cond.pas  nestedcase.pas  orphan-else-func.pas  orphan-else.pas
test/source/factorial/impl/: factorial-func.pas  factorial.pas
test/source/handshake/impl/: handshake.pas
test/source/handshake/test_in/: john15
test/source/hello/impl/: hello-func.pas  hello-var.pas  hello.pas
test/source/redundant/impl/: for-closure.pas  nested.pas  vars.pas
