name:                sodium
version:             0.1.0.0
synopsis:            A Pascal to Haskell translator.
license:             BSD3
license-file:        LICENSE
author:              Index Int
build-type:          Simple
cabal-version:       >=1.10

executable sodium
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7,
                       mtl >=2.1 && <2.2,
                       containers >=0.5 && <0.6,
                       pretty >=1.1 && <1.2
  default-extensions:  LambdaCase, TupleSections,
                       MultiParamTypeClasses, FunctionalDependencies
  ghc-options:         -W -O2 -threaded -with-rtsopts "-N"
  hs-source-dirs:      src
  default-language:    Haskell2010
