name:                sodium
version:             0.1.0.0
synopsis:            A Pascal to Haskell translator.
license:             BSD3
license-file:        LICENSE
author:              Index Int
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Sodium
                       Sodium.Frontend.Program
                       Sodium.Frontend.Parser
                       Sodium.Frontend.Token
                       Sodium.Frontend.Tokenizer
                       Sodium.Frontend.Chlorinate
                       Sodium.Backend.Program
                       Sodium.Backend.Dech
                       Sodium.Backend.Render
                       Sodium.Chloride.Program
                       Sodium.Chloride.Vectorizer
                       Sodium.Chloride.Flatten
                       Sodium.Chloride.IOMagic
                       Sodium.Chloride.Pattern
                       Sodium.Tr
                       Sodium.SubstituteSingle

  build-depends:       base >=4.6 && <4.7,
                       mtl >=2.1 && <2.2,
                       containers >=0.5 && <0.6,
                       pretty >=1.1 && <1.2,
                       lens >=4.0 && <4.1
  ghc-options:         -W -O2
  default-extensions:  LambdaCase,
                       TupleSections,
                       MultiParamTypeClasses,
                       FunctionalDependencies
  hs-source-dirs:      src
  default-language:    Haskell2010

executable sodium-tool
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7, sodium
  default-extensions:  LambdaCase
  ghc-options:         -W -O2 -threaded "-with-rtsopts=-N"
  hs-source-dirs:      src/sodium-tool
  default-language:    Haskell2010
