name:                sodium
version:             0.1.0.0
synopsis:            A Pascal to Haskell translator.
license:             BSD3
license-file:        LICENSE
author:              Index Int
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Sodium
                       Sodium.Pascal.Program
                       Sodium.Pascal.Parse
                       Sodium.Pascal.Tokenize
                       Sodium.Pascal.Convert
                       Sodium.Haskell.Program
                       Sodium.Haskell.Convert
                       Sodium.Haskell.Render
                       Sodium.Chloride.Program
                       Sodium.Chloride.Program.Scalar
                       Sodium.Chloride.Program.Vector
                       Sodium.Chloride.Vectorize
                       Sodium.Chloride.Flatten
                       Sodium.Chloride.JoinMultiIf
                       Sodium.Chloride.IOMagic
                       Sodium.Chloride.Pattern
                       Sodium.Chloride.FoldMatch
                       Sodium.Chloride.Side
                       Sodium.Chloride.Recmap.Scalar
                       Sodium.Chloride.Recmap.Vector
                       Sodium.Tr
                       Sodium.ApplyOnce
                       Data.Stack

  build-depends:       base >=4.6 && <4.7,
                       mtl >=2.1 && <2.2,
                       containers >=0.5 && <0.6,
                       pretty >=1.1 && <1.2,
                       lens >=4.0 && <4.1,
                       profunctors >=4.0 && <4.1
  ghc-options:         -W -O2
  default-extensions:  LambdaCase,
                       TupleSections,
                       MultiParamTypeClasses,
                       FunctionalDependencies
  hs-source-dirs:      src
  default-language:    Haskell2010

executable sodium-tool
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7, sodium
  default-extensions:  LambdaCase
  ghc-options:         -W -O2 -threaded "-with-rtsopts=-N"
  hs-source-dirs:      src/sodium-tool
  default-language:    Haskell2010
